# Atari_Emulator

./: CMakeLists.txt  main.cpp
Notes/Emulator/: 6502 Instruction Set.html  6507_Opcodes.md  Atari 2600 Emulator Project.md  MOS 6507 CPU Emulation.md  TIA (Television Interface Adapter) Emulation.md  opcodes.csv
Notes/Emulator/.obsidian/: appearance.json  community-plugins.json  graph.json  workspace.json
Notes/Emulator/.obsidian/snippets/: opcodes.css
Notes/Emulator/.trash/: CPU Emulation.md  Graphics Emulation (TIA).md
Notes/Emulator/.trash/HTML import/: 6502 Instruction Set.md
include/: cpu.h  memory.h  tia.h
src/: cpu.cpp  memory.cpp  tia.cpp
tests/: CpuTests.cpp
